# pyloid

./: .gitignore  README.md  build_config.json  example.py  main.py  main2.py  main3.py  main4.py  pyproject.toml  ruff.toml  test.py  test.txt  test2.py
.github/: FUNDING.yml
file/: index.html  index.js  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html
file/build-next/: index.html  index.txt
file/build-next/404/: index.html
file/build-next/_next/static/_i2M9s0TOTEVK9tEFDw5Y/: _buildManifest.js
file/build-next/_next/static/chunks/: 203.2b4c1ee4fbe3a7cf.js  218.57a830a2c55ba802.js  8e1d74a4-b26a025d492908c3.js  959-48be69c03b0729d8.js  main-a8670ac2edd3b80f.js  main-app-65fc20c066c8e2e5.js  webpack-de63a27a032969f5.js
file/build-next/about/: index.html  index.txt
src/pyloid/: __init__.py  api.py  autostart.py  browser_window.py  filewatcher.py  ipc.py  monitor.py  pyloid.py  rpc.py  serve.py  store.py  thread_pool.py  timer.py  tray.py  url_interceptor.py  utils.py
src/pyloid/base_ipc/: base.py
src/pyloid/builder/: __init__.py  build_config.schema.json  spec.py
src/pyloid/custom/: titlebar.py
src/pyloid/js_api/: base.py  event_api.py  window_api.py
src/pylon/: __init__.py  api.py  autostart.py  pylon.py  tray.py  utils.py
test/: hello.txt  main9.py
test/example/: async_test.py  example.py  example3.py  example4.py  main.py  main10.py  main11.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py  main8.py  main9.py  test.py  test2.py
test/fastapi/: main.py  main2.py  main3.py
(+6 files in other folders)
