[tool.poetry]
name = "pyloid"
version = "0.22.1"
description = ""
authors = ["aesthetics-of-record <111675679+aesthetics-of-record@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "pyloid", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pyside6 = "^6.8.2.1"
platformdirs = "^4.3.7"
pickledb = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
