[tool.poetry]
name = "pyloid"
version = "0.24.1"
description = ""
authors = ["aesthetics-of-record <111675679+aesthetics-of-record@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "pyloid", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pyside6 = "6.8.3"
platformdirs = "^4.3.7"
pickledb = "^1.3.2"
aiohttp-cors = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
